# bip39tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Version.cmake.h
Reference/: BIP39_TestVectors.txt
Src/: Bip39ToolsLauncher  Bip39ToolsLauncher.bat  BipMain.cpp  Dice2Bip39.cpp  Dictionary.cpp  Dictionary.h  FinalWordsBip39.cpp  MakeCompliantBip39.cpp  UnitTestsBip39.cpp  ValidateBip39.cpp  Version.cmake.h  Version.cpp  WordListEnglish.h  WordList_chinese_simplified.h  WordList_chinese_traditional.h  WordList_czech.h  WordList_english.h  WordList_french.h  WordList_italian.h  WordList_japanese.h  WordList_korean.h  WordList_portuguese.h  WordList_spanish.h
Src/Bip39/: Bip39.cpp  Bip39.h
Src/Bip39/Dictionary/: Dictionary.cpp  Dictionary.h  WordList_chinese_simplified.h  WordList_chinese_traditional.h  WordList_czech.h  WordList_english.h  WordList_french.h  WordList_italian.h  WordList_japanese.h  WordList_korean.h  WordList_portuguese.h  WordList_spanish.h
